Hair Particle Edit - Particle Mirror Crash when children are visible in the viewport #68645

Closed
opened 2019-08-14 14:44:59 +02:00 by Isiac Dagraca · 6 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1080ti

Blender Version
Broken: v2.80
Worked: v2.79

Short description of error
When using the particle editor to edit hair, selecting a hair strand with "L" then selecting Mirror from the particle menu causes a crash seems connected to strand child visibility.

Exact steps for others to reproduce the error
Load New Scene
Replace Cube with Sphere
add particle hair
turn number to zero
go to particle edit
add strands with brush
enable simple children in hair particle
enable children visibility
enable selection mode so strand vericies are visible
select strand with "L"
click mirror
Crash

**System Information** Operating system: Windows 10 Graphics card: GTX 1080ti **Blender Version** Broken: v2.80 Worked: v2.79 **Short description of error** When using the particle editor to edit hair, selecting a hair strand with "L" then selecting Mirror from the particle menu causes a crash seems connected to strand child visibility. **Exact steps for others to reproduce the error** Load New Scene Replace Cube with Sphere add particle hair turn number to zero go to particle edit add strands with brush enable simple children in hair particle enable children visibility enable selection mode so strand vericies are visible select strand with "L" click mirror *Crash*
Author

Added subscriber: @IsiacDaGraca

Added subscriber: @IsiacDaGraca
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking... this worked in 2.79...

Can confirm, checking... this worked in 2.79...
Philipp Oeser changed title from Hair Particle Edit - Particle Mirror Crash to Hair Particle Edit - Particle Mirror Crash when children are visible in the viewport 2019-09-11 11:54:19 +02:00

This issue was referenced by db4571f3c3

This issue was referenced by db4571f3c331b635a10c2804360cb9403420d3c7
Member

This crashes in the psys_thread_create_path
where (ParticleKey *)(key- [x] + k) is NULL (the parent in offset_child)

backtrace:

1 copy_v3_v3                math_vector_inline.c 63   0x2ca2a36      
2 offset_child              particle.c           2196 0x2ca92a4      
3 psys_thread_create_path   particle.c           2642 0x2caabb3      
4 exec_child_path_cache     particle.c           2752 0x2cab125      
5 task_scheduler_thread_run task.c               450  0x2e8fe05      
6 start_thread                                        0x7ffff481d5a2 
7 clone                                               0x7ffff1bb0303

full ASAN output (heap-buffer-overflow) in P1095

This crashes in the `psys_thread_create_path` where `(ParticleKey *)(key- [x] + k) ` is NULL (the parent in `offset_child`) backtrace: ``` 1 copy_v3_v3 math_vector_inline.c 63 0x2ca2a36 2 offset_child particle.c 2196 0x2ca92a4 3 psys_thread_create_path particle.c 2642 0x2caabb3 4 exec_child_path_cache particle.c 2752 0x2cab125 5 task_scheduler_thread_run task.c 450 0x2e8fe05 6 start_thread 0x7ffff481d5a2 7 clone 0x7ffff1bb0303 ``` full ASAN output (heap-buffer-overflow) in [P1095](https://archive.blender.org/developer/P1095.txt)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-09-26 17:38:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68645
No description provided.